--- a/app/src/index.html
+++ b/app/src/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Wechat H5 Boilerplate</title>
+    <title>fancy-广发信用卡官方金牌顾问</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <!-- Add your keywords and description here for SEO. -->
-    <meta name="keywords" content="">
+    <meta name="keywords" content="广发 信用卡">
     <meta name="description" content="">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 
@@ -32,15 +32,15 @@
     <div class="swiper-wrapper">
         <div class="swiper-slide slide-1">
             <div class="item-image animated" data-ani-name="slideInLeft" data-ani-duration="1s" data-ani-delay="0s"></div>
-            <p class="item-text animated" data-ani-name="slideInRight" data-ani-duration="1s" data-ani-delay="0.3s">I'm a coder!</p>
+            <p class="item-text animated" data-ani-name="slideInRight" data-ani-duration="1s" data-ani-delay="0.3s">您的私人理财顾问</p>
         </div>
         <div class="swiper-slide slide-2">
             <div class="item-image animated" data-ani-name="bounceInDown" data-ani-duration="1s" data-ani-delay="0s"></div>
-            <p class="item-text animated" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="0.3s">I'm a frontend developer!</p>
+            <p class="item-text animated" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="0.3s">立即长按二维码加我，进入财富之门</p>
         </div>
         <div class="swiper-slide slide-3">
             <div class="item-image animated" data-ani-name="flipInX" data-ani-duration="1s" data-ani-delay="0s"></div>
-            <p class="item-text animated" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="0.3s">I'm a javascript newbie!</p>
+            <p class="item-text animated" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="0.3s">微信公众号即将上线，尽情期待</p>
         </div>
     </div>
 </div>
