--- a/app/src/index.html
+++ b/app/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>fancy-广发信用卡官方金牌顾问</title>
+    <title>Fancy-广发信用卡官方金牌顾问</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <!-- Add your keywords and description here for SEO. -->
     <meta name="keywords" content="广发 信用卡">
@@ -36,7 +36,7 @@
         </div>
         <div class="swiper-slide slide-2">
             <div class="item-image animated" data-ani-name="bounceInDown" data-ani-duration="1s" data-ani-delay="0s"></div>
-            <p class="item-text animated" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="0.3s">立即长按二维码加我，进入财富之门</p>
+            <p class="item-text animated" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="0.3s">立即扫描二维码加我，打开财富之门</p>
         </div>
         <div class="swiper-slide slide-3">
             <div class="item-image animated" data-ani-name="flipInX" data-ani-duration="1s" data-ani-delay="0s"></div>
